--- a/config.yaml
+++ b/config.yaml
@@ -20,10 +20,10 @@ menu:
       url: /contacts/
     - name: Projects
       url: /projects/
-    - name: GitHub
-      url: https://github.com/rstudio/blogdown
-    - name: Twitter
-      url: https://twitter.com/rstudio
+    # - name: GitHub
+    #   url: https://github.com/rstudio/blogdown
+    # - name: Twitter
+    #   url: https://twitter.com/rstudio
 params:
   MathJaxCDN: //cdnjs.cloudflare.com/ajax/libs
   MathJaxVersion: 2.7.5
