--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ params:
   logo:
     alt: Logo
     height: 50
-    url: logo.png
+    url: logo2.png
     width: 50
 markup:
   defaultMarkdownHandler: goldmark
